# value_scanner

./: .gitignore  CLAUDE.md  PROJECT_OVERVIEW.md  README.md  architecture_docs.md  close_popup.py  config.py  filtered_companies.json  filtered_stocks.json  filters_results.csv  gemini_info.md  main.py  new_companies.md  pyproject.toml  rate_limit_debug.txt  report_generator_flow.md  short_report.md  stock_finantial_filters.py  switch_claude_code_mode.py  test.ipynb  test_cleanup.py  valid_benjamin.md
company_classifiers/: cyclical.py  generate_classifications.py  growth.py  main.py  pharma.py  run_test.py  tech.py
constants/: sectors.py
enums/: __init__.py  balance_sheet_csv_enum.py  balance_sheet_index.py  cash_flow_csv_enum.py  cash_flow_index.py  income_csv_enum.py  income_index.py  ratios_csv_enum.py  ratios_index.py
outputs/: company_classifications.csv  filtered_companies.json  filters_results.csv  filters_results.md  new_companies.md
pipeline/: batch_processor.py  get_filtered_companies.py  http_reports_fetcher.py  report_maker.py  reports_fetcher.py  update_stock_list.py
playwright_utils/: __init__.py  browser_manager.py  config.py  cookie_utils.py  login_utils.py  page_helper.py  quick_actions.py
reports_checks/: __init__.py  basic_reports_check.py  benjamin_graham_check.py  cyclical_classifier.py  formula_helpers.py  ken_fisher_check.py
testing_scripts/: examples_playwright.ipynb  test.ipynb
utils/: df_cleaner.py  enum_generator.py  file_handler.py  financial_helpers.py  formatting.py  get_symbol_csvs_paths.py  linear_regression.py  logger.py  (+2 more)
(+65 files in other folders)
