[project]
name = "value-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
]
