[project]
name = "value-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
]
